# fig-revival

./: Cargo.toml  PATCHES.md  QUICKSTART.md  README.md  install-simple.sh  install.sh  uninstall.sh
.github/workflows/: benchmarks.yml  build-release.yml  code-quality.yml  install-test.yml  rust.yml  security.yml
crates/chat-cli/src/: logging.rs
crates/chat-cli/src/auth/: builder_id.rs
crates/chat-cli/src/cli/: mod.rs
crates/fig_auth/: Cargo.toml
crates/fig_auth/src/: consts.rs  error.rs  lib.rs
crates/fig_auth/src/secret_store/: macos.rs  sqlite.rs
crates/fig_cli/: Cargo.toml
crates/fig_cli/src/cli/: completion.rs  diagnostics.rs  feed.rs  hook.rs  init.rs  inline.rs  installation.rs  issue.rs  mod.rs  settings.rs  theme.rs  translate.rs  uninstall.rs  update.rs  user.rs
crates/fig_cli/src/cli/app/: mod.rs
crates/fig_cli/src/cli/debug/: fix_permissions.rs  mod.rs
crates/fig_cli/src/cli/doctor/: mod.rs
crates/fig_cli/src/cli/doctor/checks/: bash_version.rs  fish_version.rs  linux.rs
crates/fig_cli/src/cli/internal/: generate_ssh.rs  inline_shell_completion.rs  local_state.rs  mod.rs  multiplexer.rs  should_figterm_launch.rs
crates/fig_desktop/: Cargo.toml
crates/fig_desktop_api/: Cargo.toml
crates/fig_integrations/src/shell/: mod.rs
crates/fig_local_provider/: Cargo.toml
crates/fig_local_provider/src/: lib.rs
crates/fig_log/src/: lib.rs
crates/fig_telemetry/: Cargo.toml
crates/fig_telemetry/src/: event.rs  lib.rs
crates/fig_telemetry_core/: Cargo.toml
crates/fig_telemetry_core/src/: lib.rs
crates/fig_util/src/: consts.rs
crates/figterm/: Cargo.toml
crates/figterm/src/inline/: completion_cache.rs  mod.rs
crates/q_cli/: Cargo.toml
crates/q_cli/src/cli/: inline.rs  user.rs
crates/q_cli/src/cli/doctor/checks/: midway.rs  sshd_config.rs
docs/: README.md  index.html
extensions/gnome-extension/resources/: resources.gresource.xml
extensions/gnome-legacy-extension/resources/: resources.gresource.xml
scripts/: install.sh
