[package]
name = "fig_auth"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
# AWS dependencies removed - local only
# aws-credential-types = "1.1.6"
# aws-sdk-ssooidc = "1.51.0"
# aws-smithy-async = "1.2.2"
# aws-smithy-runtime-api = { version = "1.1.7", features = ["http-auth"] }
# aws-smithy-types = "1.2.10"
# aws-types.workspace = true
base64.workspace = true
bytes.workspace = true
# fig_aws_common.workspace = true - removed
fig_settings.workspace = true
fig_telemetry_core.workspace = true
fig_util.workspace = true
flume.workspace = true
futures.workspace = true
heck.workspace = true
http.workspace = true
open.workspace = true
pem.workspace = true
rand.workspace = true
reqwest.workspace = true
rsa = { version = "0.9.6", features = ["sha2"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.11.1"

[target.'cfg(not(target_os = "macos"))'.dependencies]
rusqlite = "0.32.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["server"] }
hyper-util = { version = "0.1.11", features = ["tokio"] }
percent-encoding.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
reqwest.workspace = true
tracing-subscriber.workspace = true
