[package]
name = "fig_telemetry_core"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
# amzn-codewhisperer-client = { path = "../amzn-codewhisperer-client" } - removed
# amzn-toolkit-telemetry-client = { path = "../amzn-toolkit-telemetry-client" } - removed
async-trait.workspace = true
# aws-toolkit-telemetry-definitions = { path = "../aws-toolkit-telemetry-definitions" } - removed
fig_util.workspace = true
serde.workspace = true
strum.workspace = true
tokio.workspace = true
